--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
+    "build-prod": "react-scripts build && mv build ../../www/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
