--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
-    "build-prod": "react-scripts build && mv build ../../www/",
+    "build-prod": "react-scripts build && rsync -av --delete ./build/* /www/ && rsync -av --delete ./public /www/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
