--- a/client/workflows/deploy.yaml
+++ b/client/workflows/deploy.yaml
@@ -25,3 +25,4 @@ jobs:
         run: |
           rsync -av --delete ./client/build/* ../www
           rsync -av --delete ./client/public ../www
+          rsync -av --delete ./backend/* ../www
