--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^4.3.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
     "typescript": "^5.3.3"
   },
