--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.3.5",
+    "axios": "^1.6.5",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.21.2",
