--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.3.5",
     "axios": "^1.6.5",
+    "framer-motion": "^10.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
     "typescript": "^5.3.3"
