--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
+    "rebass": "^4.0.7",
     "typescript": "^5.3.3"
   },
   "overrides": {
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/rebass": "^4.0.14"
   }
 }
