--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -25,4 +25,4 @@ jobs:
         username: nomadmt
         password: ${{ secrets.OVH_SSH_PASSWORD }}
         local-dir: client/build/
-        server-dir: /www/
+        server-dir: /www/nbhdesign/
